# HomePiWeb

./: .gitignore  Note_qkauia.md  README.md  README_new.md  ZeroTier.md  environment.yml  environment_windows.yml  main.py  manage.py  pi_ip_config.md  pip3說明.md  pyproject.toml  初始操作.md  專案構思版本更新.md  解決wifi浮動辦法們.md
HomePiWeb/: admin.py  asgi.py  middleware.py  mongo.py  settings.py  urls.py  wsgi.py
groups/: admin.py  apps.py  forms.py  models.py  permissions.py  tests.py  urls.py  views.py
groups/migrations/: 0001_initial.py  0002_devicesharerequest_groupsharegrant.py  0003_groupdevicepermission.py  0004_remove_groupdevicepermission_created_at_and_more.py  0005_alter_devicesharerequest_options_alter_group_options_and_more.py
invites/: admin.py  apps.py  models.py  urls.py  views.py
invites/migrations/: 0001_initial.py  (+3 more)
notifications/: admin.py  api_urls.py  apps.py  context_processors.py  events.py  models.py  serializers.py  views.py  web_urls.py
pi_agent/: IoT_Note.md  README.md  bh1750_probe.py  cleanup_gpio.py  cleanup_hls.sh  env  environment.yml  homepi-agent.service  homepi-agent.service.md  homepi-hls.service  homepi-hls.service.md  http_agent.py  install_and_test.sh  pi5說明檔.md  quick_test.py  quick_test_rpi.py  serve_hls.py  test_local.py  test_locker.py  test_locker_sim.py  test_pins.py  test_servo_detailed.py  專案結構概觀.md  測試說明.md
pi_devices/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
templates/: base.html  home.html
users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py  views_password_reset.py
(+150 files in other folders)
